--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-contacts-list",
+  "name": "vue-users-list",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,21 +8,19 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^0.21.0",
     "core-js": "^3.6.5",
-    "import/no-extraneous-dependencies": [
-      "error",
-      {
-        "devDependencies": [
-          "**/*.test.js",
-          "**/*.spec.js"
-        ]
-      }
-    ],
+    "execa": "^4.1.0",
+    "faker": "^5.1.0",
+    "mint": "^0.3.5",
+    "miragejs": "^0.1.41",
+    "primeflex": "^2.0.0",
+    "primeicons": "^4.1.0",
+    "primevue": "^2.2.1",
     "register-service-worker": "^1.7.1",
-    "vue": "^2.6.12",
+    "vue": "^2.6.11",
+    "vue-class-component": "^7.2.6",
     "vue-router": "^3.2.0",
-    "vuex": "^3.5.1"
+    "webpack": "^5.7.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
